# reid

./: .env  Makefile  docker-compose.yml  embed_train_images.py  main.py  milvus_llamaindex.db  populate_cls_token_collection.py  populate_extended_embedding_collection.py  pyproject.toml  simple_cls_store.py  store_cls_tokens.py  test_milvus_connection.py
deploy/config/pgvector/: 01-setup-pgvector.sql  10-init-pgvector.sql  20-add-test-data.sql  99-ensure-vector-data.sql  Dockerfile  setup-vector-tables.sh
experiments/: contributing-feature-visualizations-clip.py  contributing-feature-visualizations-dino-sam.py  contributing-feature-visualizations-dino.py  unique-feature-visualizations.py
